--- a/trunk/plugins/about/Makefile.am
+++ b/trunk/plugins/about/Makefile.am
@@ -5,7 +5,8 @@ about_la_SOURCES = \
  aboutdlg.cpp \
  aboutdlgbase.ui
 
-INCLUDES=-I$(srcdir)/../../sim $(all_includes)
+# set the include path for X, qt and KDE
+INCLUDES=$(LTDLINCL) -I$(srcdir)/../../sim -I. -I../plugins/_core $(all_includes)
 
 about_la_METASOURCES = AUTO
 about_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_QT) $(LIB_KDECORE) $(LIB_KDEUI) $(EXTRA_LIBS)
