--- a/trunk/plugins/netmonitor/Makefile.am
+++ b/trunk/plugins/netmonitor/Makefile.am
@@ -4,7 +4,8 @@ netmonitor_la_SOURCES = \
  netmonitor.cpp \
  monitor.cpp
 
-INCLUDES=-I$(srcdir)/../../sim $(all_includes)
+INCLUDES= $(all_includes)
+INCLUDES=$(LTDLINCL) -I$(srcdir)/../../sim -I. -I../plugins/_core $(all_includes)
 
 netmonitor_la_METASOURCES = AUTO
 netmonitor_la_LIBADD = ../../sim/libsim.la  $(LIBUI) $(LIB_KDECORE) $(LIB_KDEUI) $(LIB_KFILE) $(LIB_QT) $(EXTRA_LIBS)
