Openssl is now required to build Sim-IM. (As far as it is required to build most of the IM-plugins)

--- a/trunk/CMakeLists.txt
+++ b/trunk/CMakeLists.txt
@@ -39,13 +39,14 @@ FIND_PACKAGE(Qt3 REQUIRED)
 FIND_PACKAGE(LibXml2 REQUIRED)
 FIND_PACKAGE(LibXslt REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
+FIND_PACKAGE(OpenSSL REQUIRED)
 IF(WIN32)
     FIND_PACKAGE(LibIconv REQUIRED)
 ENDIF(WIN32)
 
 # optional packages
 FIND_PACKAGE(ASPELL)
-FIND_PACKAGE(OpenSSL)
+
 INCLUDE(FindX11)
 
 IF(NOT WIN32)
