don't create jisp if it has no sources use gpl icons as main jisp if main is not found (i.e. building from gpl dir)

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -160,7 +160,14 @@ SET(_core_UICS
 
 # so we don't need an extra CMakeLists.txt in every subdirectory
 ADD_JISP_ARCHIVE(jisp       sim.jisp        _core_SRCS)
-ADD_JISP_ARCHIVE(GPL-Icons  GPL-Icons.jisp  _core_SRCS)
+
+IF (EXISTS jisp/icondef.xml)
+    ADD_JISP_ARCHIVE(GPL-Icons  GPL-Icons.jisp  _core_SRCS)
+ELSE (EXISTS jisp/icondef.xml)
+    # substitute with gpl icons
+    ADD_JISP_ARCHIVE(GPL-Icons  sim.jisp        _core_SRCS)
+ENDIF (EXISTS jisp/icondef.xml)
+
 #ADD_JISP_ARCHIVE(smiles     smiles.jisp     _core_SRCS)
 #ADD_JISP_ARCHIVE(additional additional.jisp _core_SRCS)
 #ADD_JISP_ARCHIVE(icq5       icq5.jisp       _core_SRCS)
