--- a/branches/trunk-debian-official/debian/control
+++ b/branches/trunk-debian-official/debian/control
@@ -2,16 +2,18 @@ Source: sim
 Section: net
 Priority: optional
 Maintainer: Alexander Petrov <zowers@gmail.com>
-Build-Depends: debhelper (>> 4.0.0), flex, autoconf (>= 2.59), automake1.9, autotools-dev, perl, libtool (>= 1.5.2), libfam-dev (>= 2.7.0), libpng12-dev (>= 1.2.8rel), libqt3-mt-dev (>= 3:3.3.6), libqt3-headers (>= 3:3.3.6), qt3-dev-tools (>= 3:3.3.6), libssl-dev (>= 0.9.8b), kdelibs4-dev (>= 4:3.5.3), zlib1g-dev (>= 1:1.2.3), libexpat1-dev (>= 1.95.8), libxml2-dev (>= 2.6.24), libxslt1-dev (>= 1.1.16), libxft-dev (>= 2.1.8.2), libxss-dev (>= 1:1.0.1), zip
+Build-Depends: debhelper (>= 7), flex, cmake (>= 2.4.8), libtool (>= 1.5.20), g++ (>= 4.0), libpng12-dev (>= 1.2.27), libqt3-mt-dev (>= 3:3.3.8), libqt3-headers (>= 3:3.3.8), qt3-dev-tools (>= 3:3.3.8), libssl-dev (>= 0.9.8g), kdelibs4-dev (>= 4:3.5.9), zlib1g-dev (>= 1:1.2.3.3), libexpat1-dev (>= 1.95.8), libxml2-dev (>= 2.6.32), libxslt1-dev (>= 1.1.24), libxft-dev (>= 2.1.12), libxss-dev (>= 1:1.1.3), zip
 Standards-Version: 3.7.2
+Homepage: http://sim-im.org/
 
 Package: sim
 Architecture: any
-Depends: ${shlibs:Depends}, sim-data (= ${source:Version})
+Depends: ${shlibs:Depends}, sim-data (= ${source:Version}), ${misc:Depends}
 Conflicts: sim-qt (<= ${source:Version})
 Replaces:  sim-qt (<= ${source:Version})
-Suggests: gnupg (>= 1.4.3)
-Description: Simple Instant Messenger (KDE)
+Suggests: gnupg (>= 1.4.6)
+Homepage: http://sim-im.org/
+Description: Sim-IM Instant Messenger (KDE)
  sim is a simple and powerful multi-protocol instant messenger.
  .
  Some of the features:
@@ -31,19 +33,18 @@ Description: Simple Instant Messenger (KDE)
   * On-Screen display notification about messages and user status;
   * Sending of the messages to several users;
   * Proxy: HTTP/HTTPS, SOCKS4, SOCKS5.
- .
-  Homepage: http://sim-im.org/
  .
   This package is compiled with KDE support.
   See the 'kde' package for more information about KDE.
 
 Package: sim-qt
 Architecture: any
-Depends: ${shlibs:Depends}, sim-data (= ${source:Version})
+Depends: ${shlibs:Depends}, sim-data (= ${source:Version}), ${misc:Depends}
 Conflicts: sim (<= ${source:Version})
 Replaces:  sim (<= ${source:Version})
-Suggests: gnupg (>= 1.4.3)
-Description: Simple Instant Messenger (Qt)
+Suggests: gnupg (>= 1.4.6)
+Homepage: http://sim-im.org/
+Description: Sim-IM Instant Messenger (Qt)
  sim is a simple and powerful multi-protocol instant messenger.
  .
  Some of the features:
@@ -63,8 +64,6 @@ Description: Simple Instant Messenger (Qt)
   * On-Screen display notification about messages and user status;
   * Sending of the messages to several users;
   * Proxy: HTTP/HTTPS, SOCKS4, SOCKS5.
- .
-  Homepage: http://sim-im.org/
  .
   This package is compiled with Qt support.
   If you have KDE installed then install sim package instead.
@@ -74,7 +73,7 @@ Architecture: all
 Conflicts: sim (<< ${source:Version})
 Replaces:  sim (<< ${source:Version})
 Suggests: sim (= ${source:Version}) | sim-qt (= ${source:Version})
-Description: Simple Instant Messenger data files
+Description: Sim-IM Instant Messenger data files
  sim is a simple and powerful multi-protocol instant messenger.
  .
   This package contains data files for sim and sim-qt packages.
