--- a/branches/trunk-debian-official/debian/rules
+++ b/branches/trunk-debian-official/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 # sim-im debian/rules that uses debhelper.
-# Copyright (c) 2006 Alexander 'zowers' Petrov.
+# Copyright (c) 2006-2008 Alexander 'zowers' Petrov.
 
 # This file is based on:
 # # Sample debian/rules that uses debhelper.
@@ -15,7 +15,9 @@ sim_qt = sim-qt
 sim_data = sim-data
 
 tmp_sim = $(CURDIR)/debian/$(sim)
+bld_sim = $(tmp_sim)-build
 tmp_sim_qt = $(CURDIR)/debian/$(sim_qt)
+bld_sim_qt = $(tmp_sim_qt)-build
 tmp_sim_data = $(CURDIR)/debian/$(sim_data)
 tmp = $(tmp_sim)
 pixmaps = $(tmp)/usr/share/pixmaps
@@ -23,9 +25,9 @@ overrides = $(tmp)/usr/share/lintian/overrides
 kdedocs = $(tmp)/usr/share/doc/kde/HTML
 sim_data_dirs = usr/share/apps/sim  usr/share/icons  usr/share/locale  usr/share/pixmaps
 
-stamps_to_clean = admin/make-common-stamp build-stamp-sim build-stamp-sim-qt install-stamp-sim-data
+stamps_to_clean = admin/make-common-stamp build-stamp build-stamp-sim build-stamp-sim-qt install-stamp-sim-data
 files_to_clean = debian/debiandirs configure aclocal.m4 acinclude.m4 po/*gmo config.log config.status
-dirs_to_clean = doc/en/HTML
+dirs_to_clean = doc/en/HTML debian/sim-build debian/sim-qt-build
 
 INSTALL_DIR = install -p -d -o root -g root -m 755
 INSTALL_FILE = install -p -o root -g root -m 644
@@ -45,42 +47,52 @@ endif
 
 CFLAGS = -Wall -g
 ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
+	CMAKE_BUILD_TYPE=Debug
+	CFLAGS+=-O0
 else
-	CFLAGS += -O2
+	CMAKE_BUILD_TYPE=RelWithDebInfo
+	CFLAGS+=-O2
 endif
-
-CXXFLAGS:=$(CFLAGS)
 
 ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
 	INSTALL_PROGRAM += -s
 endif
 
+CMAKE_INSTALL_PREFIX=/usr
+DEV_BUILD=NO
+SIM_ENABLE_FPIE=YES
+USE_GCC_VISIBILITY=YES
+COMMON_OPTIONS=-DCMAKE_C_FLAGS:STRING="$(CFLAGS)" \
+	-DCMAKE_CXX_FLAGS:STRING="$(CXXFLAGS)" \
+	-DCMAKE_INSTALL_PREFIX:STRING="$(CMAKE_INSTALL_PREFIX)" \
+	-DDEV_BUILD:BOOL="$(DEV_BUILD)" \
+	-DSIM_ENABLE_FPIE:BOOL="$(SIM_ENABLE_FPIE)" \
+	-DUSE_GCC_VISIBILITY:BOOL="$(USE_GCC_VISIBILITY)"
+
 admin/make-common-stamp:
-	# emulate /usr/bin/libtoolize -f
-	ln -sf /usr/share/misc/config.guess		admin/config.guess
-	ln -sf /usr/share/misc/config.sub		admin/config.sub
-	ln -sf /usr/share/libtool/ltmain.sh		admin/ltmain.sh
-	ln -sf /usr/share/aclocal/libtool.m4	admin/libtool.m4.in
-
-	$(MAKE) -f admin/Makefile.common
-
 	touch admin/make-common-stamp
+
+build-stamp:
+	touch build-stamp
 
 build-stamp-sim: admin/make-common-stamp
 	# delete stamp for sim-qt
 	-rm -f build-stamp-sim-qt
 
 	# configure sim
-	./configure $(configkde) CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)" \
-		--enable-kde
+	-mkdir -p $(bld_sim)
+	cd $(bld_sim) && cmake \
+	    $(COMMON_OPTIONS) \
+	    -DENABLE_KDE3:BOOL=YES \
+	    $(CURDIR) \
+	&& cd $$OLDPWD # cd old is optional
 
 	# Touch all the UI files. This will force uic to regenerate .h as well as .cpp sources.
 	# by default .cpp sources are regenerated but headers are not.
 	touch `find . -name "*.ui"`
 
 	# make sim
-	$(MAKE)
+	$(MAKE) --directory=$(bld_sim)
 
 	# create stamp for sim
 	touch build-stamp-sim
@@ -90,25 +102,26 @@ build-stamp-sim-qt: admin/make-common-stamp
 	-rm -f build-stamp-sim
 
 	# configure sim-qt
-	./configure $(configkde) CFLAGS="$(CFLAGS)" CXXFLAGS="$(CXXFLAGS)" \
-		--disable-kde
+	-mkdir -p $(bld_sim_qt)
+	cd $(bld_sim_qt) && cmake \
+		$(COMMON_OPTIONS) \
+		-DENABLE_KDE3:BOOL=NO \
+		$(CURDIR) \
+	&& cd $$OLDPWD # cd old is optional
 
 	# Touch all the UI files. This will force uic to regenerate .h as well as .cpp sources.
 	# by default .cpp sources are regenerated but headers are not.
 	touch `find . -name "*.ui"`
 
 	# make sim-qt
-	$(MAKE)
+	$(MAKE) --directory=$(bld_sim_qt)
 	touch build-stamp-sim-qt
 
-debian/debiandirs: admin/debianrules
-	perl -w admin/debianrules echodirs > debian/debiandirs
+build-sim: build-stamp build-stamp-sim
+	#
 
-build-sim: build-stamp-sim
--include debian/debiandirs
-
-build-sim-qt: build-stamp-sim-qt
--include debian/debiandirs
+build-sim-qt: build-stamp build-stamp-sim-qt
+	#
 
 build:
 	# build is just a required stub (Policy: 4.8)
@@ -117,8 +130,8 @@ clean-common:
 	dh_testdir	-p$(pkg)
 	dh_testroot	-p$(pkg)
 
-	# make distclean
-	-$(MAKE) distclean
+	# make clean
+	-$(MAKE) --directory=$(tmp)-build clean
 
 	# clean other files
 	-rm -f $(stamps_to_clean)
@@ -138,6 +151,7 @@ clean: clean-sim clean-sim-qt
 	# clean is just a dependecy
 
 install-common: build-$(pkg)
+
 	-rm -f install-stamp-sim-data
 	dh_testdir	-p$(pkg)
 	dh_testroot	-p$(pkg)
@@ -154,7 +168,7 @@ install-common: build-$(pkg)
 	$(INSTALL_FILE) debian/$(pkg).override $(overrides)/$(pkg)
 
 	# Main install.
-	$(MAKE) install DESTDIR=$(tmp)
+	$(MAKE) --directory=$(tmp)-build install DESTDIR=$(tmp)
 
 	# Remove unneeded stuff.
 	rm -f $(tmp)/usr/share/apps/sim/COPYING
@@ -165,8 +179,8 @@ install-common: build-$(pkg)
 
 	# Generate HTML docs.
 	for i in `find $(tmp) -name "*.docbook"`; do \
-	  pushd . > /dev/null; cd `dirname $$i`; meinproc `basename $$i`; \
-	  popd > /dev/null; done
+	  cd `dirname $$i`; meinproc `basename $$i`; \
+	  cd $$OLDPWD; done
 
 	debian/rules install-sim-data-from src_pkg=$(pkg) src_tmp=$(tmp)
 
@@ -219,7 +233,7 @@ binary-arch-common: build-$(pkg) install-$(pkg)
 	dh_shlibdeps	-p$(pkg) -L$(pkg)
 	dh_gencontrol	-p$(pkg)
 	dh_md5sums		-p$(pkg)
-	dh_builddeb		-p$(pkg)
+	dh_builddeb		-p$(pkg) -- -Z bzip2
 
 # Build architecture-dependent files here.
 binary-arch-sim:
@@ -240,7 +254,7 @@ binary-indep-sim-data: install-sim-data
 	dh_fixperms		-p$(sim_data)
 	dh_gencontrol	-p$(sim_data)
 	dh_md5sums		-p$(sim_data)
-	dh_builddeb		-p$(sim_data)
+	dh_builddeb		-p$(sim_data) -- -Z bzip2
 
 # Build architecture-independent files here.
 binary-indep: binary-indep-sim-data
