--- a/branches/trunk-debian-official/debian/control
+++ b/branches/trunk-debian-official/debian/control
@@ -3,7 +3,7 @@ Section: net
 Priority: optional
 Maintainer: Alexander Petrov <zowers@gmail.com>
 Build-Depends: debhelper (>= 7), flex, cmake (>= 2.4.8), libtool (>= 1.5.20), g++ (>= 4.0), libpng12-dev (>= 1.2.27), libqt3-mt-dev (>= 3:3.3.8), libqt3-headers (>= 3:3.3.8), qt3-dev-tools (>= 3:3.3.8), libssl-dev (>= 0.9.8g), kdelibs4-dev (>= 4:3.5.9), zlib1g-dev (>= 1:1.2.3.3), libexpat1-dev (>= 1.95.8), libxml2-dev (>= 2.6.32), libxslt1-dev (>= 1.1.24), libxft-dev (>= 2.1.12), libxss-dev (>= 1:1.1.3), zip
-Standards-Version: 3.7.2
+Standards-Version: 3.8.0
 Homepage: http://sim-im.org/
 
 Package: sim
@@ -13,8 +13,8 @@ Conflicts: sim-qt (<= ${source:Version})
 Replaces:  sim-qt (<= ${source:Version})
 Suggests: gnupg (>= 1.4.6)
 Homepage: http://sim-im.org/
-Description: Sim-IM Instant Messenger (KDE)
- sim is a simple and powerful multi-protocol instant messenger.
+Description: simple instant messenger (KDE)
+ SIM-IM is a simple and powerful multi-protocol instant messenger.
  .
  Some of the features:
   * Supported protocols: ICQ, Jabber, MSN, AIM, 
@@ -36,6 +36,7 @@ Description: Sim-IM Instant Messenger (KDE)
  .
   This package is compiled with KDE support.
   See the 'kde' package for more information about KDE.
+  If you do not have KDE installed then install sim-qt package instead.
 
 Package: sim-qt
 Architecture: any
@@ -44,8 +45,8 @@ Conflicts: sim (<= ${source:Version})
 Replaces:  sim (<= ${source:Version})
 Suggests: gnupg (>= 1.4.6)
 Homepage: http://sim-im.org/
-Description: Sim-IM Instant Messenger (Qt)
- sim is a simple and powerful multi-protocol instant messenger.
+Description: simple instant messenger (Qt)
+ SIM-IM is a simple and powerful multi-protocol instant messenger.
  .
  Some of the features:
   * Supported protocols: ICQ, Jabber, MSN, AIM, 
