1. Move definition of CmdXXXX MenuXXXXXX and ToolBarXXXXX from core.h to core_const.h (so we will be able to include only this constants definition, without whole core.h stuff)
2. Rename BarHistory to ToolBarHistory and BarHistoryAvatar to ToolBarHistoryAvatar for similarity in toolbar id 
names

3. Remove useless includes of core.h in the code, replacing by core_events.h or core_consts.h where necessary

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -79,7 +79,7 @@ SET(_core_HDRS
         connectwnd.h
         container.h
         core.h
-        core.h
+        core_consts.h
         core_events.h
         declinedlg.h
         editmail.h
