--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -3933,6 +3933,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\core_consts.h"
+				>
+			</File>
+			<File
 				RelativePath=".\core_events.h"
 				>
 			</File>
