--- a/trunk/plugins/ontop/Makefile.am
+++ b/trunk/plugins/ontop/Makefile.am
@@ -7,7 +7,7 @@ ontop_la_SOURCES = \
  ontopcfg.cpp \
  ontopcfgbase.ui
 
-INCLUDES=-I$(srcdir)/../../sim $(all_includes)
+INCLUDES=-I$(srcdir)/../../sim -I../_core $(all_includes)
 
 ontop_la_METASOURCES = AUTO
 ontop_la_LIBADD = ../../sim/libsim.la  $(LIB_QT) $(LIB_KDECORE) $(EXTRA_LIBS)
