Move creating items of history window toolbar from core.cpp to toolbar_history.cpp

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -50,6 +50,7 @@ SET(_core_SRCS
         status.cpp
         statuswnd.cpp
         tmpl.cpp
+        toolbar_history.cpp
         toolbar_main.cpp
         toolbarcfg.cpp
         toolsetup.cpp
