Move creating container toolbar static items from CorePugin contructor (core.cpp) to createContainerToolbar() (toolbar_container.cpp).

--- a/trunk/plugins/_core/Makefile.am
+++ b/trunk/plugins/_core/Makefile.am
@@ -83,7 +83,8 @@ _core_la_SOURCES = \
  declinedlg.cpp \
  declinedlgbase.ui \
  toolbar_main.cpp \
- toolbar_history.cpp
+ toolbar_history.cpp \
+ toolbar_container.cpp
 
 SUBDIRS=pict styles jisp GPL-Icons emoticons_prebuilt
 
