--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -1195,6 +1195,10 @@
 				</FileConfiguration>
 			</File>
 			<File
+				RelativePath=".\toolbar_container.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\toolbar_history.cpp"
 				>
 			</File>
