--- a/trunk/plugins/_core/Makefile.am
+++ b/trunk/plugins/_core/Makefile.am
@@ -83,8 +83,7 @@ _core_la_SOURCES = \
  declinedlg.cpp \
  declinedlgbase.ui \
  toolbar_main.cpp \
- toolbar_history.cpp \
- toolbar_container.cpp
+ toolbar_history.cpp
 
 SUBDIRS=pict styles jisp GPL-Icons emoticons_prebuilt
 
