--- a/trunk/plugins/_core/Makefile.am
+++ b/trunk/plugins/_core/Makefile.am
@@ -84,7 +84,8 @@ _core_la_SOURCES = \
  declinedlgbase.ui \
  toolbar_main.cpp \
  toolbar_history.cpp \
- toolbar_container.cpp
+ toolbar_container.cpp \
+ toolbar_msgedit.cpp \
 
 SUBDIRS=pict styles jisp GPL-Icons emoticons_prebuilt
 
