--- a/trunk/plugins/_core/_core.vcproj
+++ b/trunk/plugins/_core/_core.vcproj
@@ -1207,6 +1207,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\toolbar_msgedit.cpp"
+				>
+			</File>
+			<File
 				RelativePath="toolsetup.cpp"
 				>
 				<FileConfiguration
