Move creating TextEdit toolbar items from CorePugin contructor (core.cpp) to createTextEditToolbar() (toolbar_textedit.cpp). (This toolbar is not shown anywhere but I would keep it for now, till futher investigation)

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -54,6 +54,7 @@ SET(_core_SRCS
         toolbar_history.cpp
         toolbar_main.cpp
         toolbar_msgedit.cpp
+        toolbar_textedit.cpp
         toolbarcfg.cpp
         toolsetup.cpp
         usercfg.cpp
