Move creating MenuMsgView menu items from CorePugin contructor (core.cpp) to creatMenuMsgView() (msgview_menu.cpp).

--- a/trunk/plugins/_core/CMakeLists.txt
+++ b/trunk/plugins/_core/CMakeLists.txt
@@ -38,6 +38,7 @@ SET(_core_SRCS
         msgsms.cpp
         msgurl.cpp
         msgview.cpp
+        msgview_menu.cpp
         newprotocol.cpp
         nonim.cpp
         pagerdetails.cpp
